mitigate content shift, fix ctrl+f on chrome

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
     max-width: 800px;
     margin: auto;
     font-family: 'Bebas Neue', monospace;
+    font-size-adjust: ch-width 0.4;
     padding: 0px 4rem;
 }
 footer {
@@ -288,10 +289,10 @@ button:hover {
     padding: 0.75rem 1rem;
     background-color: transparent;
 }
-.textOverlay:has(img)::after {
-    content: attr(data-name);
-    display: inline;
-    font-size: 0px;
+.searchableName {
+    position: absolute;
+    opacity: 0;
+    user-select: none;
 }
 .gameLogo {
     height: 100%;
